# leitum

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/history/: 260613-1700-Initial-Prompt-DE.md  260613-1701-Initial-Prompt-EN.md  260613-1729-Initial-Review.md
.claude/skills/homebrew-tap-bump/: SKILL.md
.claude/skills/letsplan/: README.md  SKILL.md
.claude/skills/process-issues/: SKILL.md
.github/workflows/: ci.yml  homebrew-bump.yml  release.yml
docs/: commands.md  configuration.md  getting-started.md  troubleshooting.md
docs/providers/: requesty.md
prd/: 00-overview.md  01-configuration.md  02-cli.md  03-selection-flows.md  04-launch.md  05-management-commands.md  06-testing.md  07-packaging-and-docs.md
scripts/: worktree-create.sh
src/leitum/: __init__.py  __main__.py  cli.py  launch.py  state.py
src/leitum/commands/: claude.py  doctor.py  init.py  provider.py  refresh.py
src/leitum/config/: __init__.py  env.py  io.py  models.py  paths.py  permissions.py
src/leitum/providers/: __init__.py  cache.py  discovery.py
src/leitum/selection/: __init__.py  interactive.py  resolver.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_launch.py  test_state.py
tests/unit/commands/: test_provider_io.py
tests/unit/config/: test_env.py  test_models.py  test_permissions.py
tests/unit/providers/: test_discovery.py
tests/unit/selection/: test_resolver.py
